[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/Calamity Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/UI/in_game/equipment/equipment_display.gd" type="Script" id=2]
[ext_resource path="res://resources/images/Item_Background 2.PNG" type="Texture" id=3]
[ext_resource path="res://scenes/UI/in_game/equipment/arrow_model_view.gd" type="Script" id=4]
[ext_resource path="res://models/objects/items_player/arrows/water_arrow/water_arrow_model.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D background_texture : hint_albedo;
uniform sampler2D viewport_texture : hint_albedo;

uniform vec4 background_color : hint_color;
uniform vec4 border_color : hint_color;


void fragment() {
	//Draw raw background first
	COLOR = texture(background_texture, UV);
	
	//Draw background
	if (COLOR.b == 1.0)
		COLOR = background_color;
	
	//Draw item from viewport
	if (COLOR == background_color)
		if (texture(viewport_texture, UV).a > 0.0)
			COLOR = texture(viewport_texture, UV);
	
	//Draw border
	if (COLOR.g == 1.0)
		COLOR = border_color;
}




"

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Arrow_Display/Arrow_Viewport/Viewport")

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/background_color = Color( 0.0352941, 0, 0.121569, 1 )
shader_param/border_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
shader_param/background_texture = ExtResource( 3 )
shader_param/viewport_texture = SubResource( 2 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform sampler2D background_texture : hint_albedo;

uniform vec4 background_color : hint_color;
uniform vec4 border_color : hint_color;


void fragment() {
	//Draw raw background first
	COLOR = texture(background_texture, UV);
	
	//Draw background
	if (COLOR.b == 1.0)
		COLOR = background_color;
	
	//Draw border
	if (COLOR.g == 1.0)
		COLOR = border_color;
}




"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/background_color = Color( 0.0352941, 0, 0.121569, 1 )
shader_param/border_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
shader_param/background_texture = ExtResource( 3 )

[sub_resource type="World" id=6]

[node name="Equipment_Display" type="HBoxContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -160.0
margin_right = -32.0
margin_bottom = -12.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow_Display" type="MarginContainer" parent="."]
margin_right = 128.0
margin_bottom = 148.0

[node name="Background" type="NinePatchRect" parent="Arrow_Display"]
margin_right = 128.0
margin_bottom = 148.0
rect_min_size = Vector2( 128, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow_Icon" type="TextureRect" parent="Arrow_Display/Background"]
material = SubResource( 3 )
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 3 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow_Count_Background" type="TextureRect" parent="Arrow_Display/Background"]
material = SubResource( 5 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_right = 8.0
margin_bottom = 40.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow_Count" type="Label" parent="Arrow_Display/Background/Arrow_Count_Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = -18.5
margin_right = 11.0
margin_bottom = 18.5
grow_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "52"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow_Name" type="Label" parent="Arrow_Display/Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -17.0
margin_right = 45.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 1 )
text = "Test Arrow"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow_Viewport" type="ViewportContainer" parent="Arrow_Display"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 128.0
margin_bottom = 148.0
stretch = true

[node name="Viewport" type="Viewport" parent="Arrow_Display/Arrow_Viewport"]
size = Vector2( 128, 148 )
world = SubResource( 6 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Item_Pivot" type="Spatial" parent="Arrow_Display/Arrow_Viewport/Viewport"]
transform = Transform( -1.62921e-07, -0.707107, -0.707107, 0, 0.707107, -0.707107, 1, -1.15202e-07, -1.15202e-07, 0, 0, 0 )
script = ExtResource( 4 )

[node name="Arrow_Model" type="Spatial" parent="Arrow_Display/Arrow_Viewport/Viewport/Item_Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.75 )

[node name="Water_Arrow" parent="Arrow_Display/Arrow_Viewport/Viewport/Item_Pivot/Arrow_Model" instance=ExtResource( 5 )]
layers = 524288

[node name="Timer" type="Timer" parent="Arrow_Display/Arrow_Viewport/Viewport/Item_Pivot"]
wait_time = 3.5

[node name="Tween" type="Tween" parent="Arrow_Display/Arrow_Viewport/Viewport/Item_Pivot"]

[node name="Camera" type="Camera" parent="Arrow_Display/Arrow_Viewport/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0.35 )
cull_mask = 2148532223
current = true
[connection signal="timeout" from="Arrow_Display/Arrow_Viewport/Viewport/Item_Pivot/Timer" to="Arrow_Display/Arrow_Viewport/Viewport/Item_Pivot" method="_on_Timer_timeout"]
